always create an empty bookmark document upon construction

Establishing the invariant that a document is always around avoids null pointer issues. In addition, creating an empty document upon construction should be indistinguishable from outside (compared to the previous approach where a document is created on demand).

BUG: 309273